Rename get_eigenvector and change warning format

--- a/examples/thermo_file_readwrite.ipynb
+++ b/examples/thermo_file_readwrite.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paracetamol EDFT: -5402457.523570631\n",
+      "Paracetamol EDFT: -5402456.254965135\n",
       "Paracetamol qpoint: 1 [[0. 0. 0.]]\n",
       "Paracetamol modes: 1 [240]\n"
      ]
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graphene EDFT: -28768041.661716238\n",
+      "Graphene EDFT: -28768034.906402458\n",
       "Graphene qpoints: 123\n",
       "Graphene modes: 123 [6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
       " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "paracetamol.get_eigenvector()\n",
+    "paracetamol.get_phonon_eigenvector()\n",
     "\n",
     "print('Paracetamol')\n",
     "print('nqpoint=', len(paracetamol.eigenvector),\n",
@@ -136,7 +136,7 @@
     "      'natom=', len(paracetamol.eigenvector[0, 0]),\n",
     "      'first eigenvector=', paracetamol.eigenvector[0, 0, 0])\n",
     "\n",
-    "lattice = graphene.get_eigenvector()\n",
+    "lattice = graphene.get_phonon_eigenvector()\n",
     "print('Graphene')\n",
     "print('nqpoint=', len(graphene.eigenvector),\n",
     "      'nmode=', len(graphene.eigenvector[0]),\n",
@@ -263,7 +263,7 @@
     "neg_freq = Crystal_output()\n",
     "neg_freq.read_cry_output('data/f2p2q-r1.out')\n",
     "neg_freq.get_mode()\n",
-    "neg_freq.get_eigenvector()\n",
+    "neg_freq.get_phonon_eigenvector()\n",
     "neg_freq.clean_imaginary()\n",
     "\n",
     "print(neg_freq.frequency[0, :6])\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "27693bda-617f-479b-872a-db906e7634a2",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
     "qha_freq = Crystal_output()\n",
     "qha_freq.read_cry_output('data/corundum.out')\n",
     "qha_freq.get_mode()\n",
-    "qha_freq.get_eigenvector()\n",
+    "qha_freq.get_phonon_eigenvector()\n",
     "\n",
     "print(qha_freq.nqpoint)\n",
     "print(qha_freq.qpoint)\n",
