--- a/tutorial/thermo-QHA.ipynb
+++ b/tutorial/thermo-QHA.ipynb
@@ -66,40 +66,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:805: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
+      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:806: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
       "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning: Optimised volume exceeds the sampled range. Special care should be taken of.\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     800.9124, Temperature: 330.00, Pressure:   0.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     800.9124, Temperature: 330.00, Pressure:   0.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     729.3229, Temperature:  20.00, Pressure:   0.75\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     729.3229, Temperature:  20.00, Pressure:   0.75\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     729.8392, Temperature:  50.00, Pressure:   0.75\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     729.8392, Temperature:  50.00, Pressure:   0.75\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     730.9337, Temperature:  80.00, Pressure:   0.75\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     730.9337, Temperature:  80.00, Pressure:   0.75\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     734.5974, Temperature: 150.00, Pressure:   0.75\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     734.5974, Temperature: 150.00, Pressure:   0.75\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     719.9896, Temperature:  20.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     719.9896, Temperature:  20.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     720.4078, Temperature:  50.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     720.4078, Temperature:  50.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     721.3363, Temperature:  80.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     721.3363, Temperature:  80.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     724.5207, Temperature: 150.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     724.5207, Temperature: 150.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     727.2358, Temperature: 200.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     727.2358, Temperature: 200.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     730.1836, Temperature: 250.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     730.1836, Temperature: 250.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n",
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_13804\\2560457534.py:11: UserWarning:   Volume:     735.2846, Temperature: 330.00, Pressure:   1.00\n",
+      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_11104\\2560457534.py:11: UserWarning:   Volume:     735.2846, Temperature: 330.00, Pressure:   1.00\n",
       "  qha.thermo_freq(temperature=tempt, pressure=press, eos_method='birch_murnaghan',\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x26d0b40b130>"
+       "<CRYSTALpytools.thermodynamics.Quasi_harmonic at 0x1fb41fe18e0>"
       ]
      },
      "execution_count": 1,
@@ -329,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:922: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
+      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:923: UserWarning: Close overlap of phonon modes detected at qpoint:   0,     34 overlaps out of     90 modes.\n",
       "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n"
      ]
     },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c3c1ab90-c40c-4e01-9676-1f0a26bfc555",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:805: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
+      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:806: UserWarning: Close overlap of phonon modes detected at qpoint:   0,    154 overlaps out of    240 modes.\n",
       "  self.combined_mode = self._combine_data(ha_list, overlap=overlap,\n"
      ]
     },
@@ -400,8 +400,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time consumption for Mode-Specific fitting:    15.392181 s\n",
-      "Time consumption for EoS fitting:    10.056918 s\n"
+      "Time consumption for Mode-Specific fitting:    15.610293 s\n",
+      "Time consumption for EoS fitting:    10.885614 s\n"
      ]
     }
    ],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a19eed27-f65e-405e-a125-06c9dcc06a28",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
     "        \n",
     "        file = Crystal_output().read_cry_output(input_file)\n",
     "        file.get_mode()\n",
-    "        file.get_eigenvector()\n",
+    "        file.get_phonon_eigenvector()\n",
     "        file.clean_imaginary()\n",
     "        \n",
     "        # Get volume/structure/dimensionality. Only to be used with QHA files\n",
