Update tutorial after generating the doc site

--- a/tutorial/thermo_file_readwrite.ipynb
+++ b/tutorial/thermo_file_readwrite.ipynb
@@ -41,7 +41,15 @@
    "execution_count": 1,
    "id": "f458c8f9",
    "metadata": {
-    "scrolled": true
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:22:26.071828Z",
+     "iopub.status.busy": "2023-04-16T22:22:26.071698Z",
+     "iopub.status.idle": "2023-04-16T22:22:26.249765Z",
+     "shell.execute_reply": "2023-04-16T22:22:26.249267Z",
+     "shell.execute_reply.started": "2023-04-16T22:22:26.071814Z"
+    },
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -49,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "Paracetamol EDFT: -5402456.254965135\n",
-      "Paracetamol qpoint: 1 [[0. 0. 0.]]\n",
+      "Paracetamol qpoint: 1 [[array([0., 0., 0.]), 1.0]]\n",
       "Paracetamol modes: 1 [240]\n"
      ]
     }
@@ -67,16 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5cf3f4ec",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:22:59.465869Z",
+     "iopub.status.busy": "2023-04-16T22:22:59.465015Z",
+     "iopub.status.idle": "2023-04-16T22:22:59.506744Z",
+     "shell.execute_reply": "2023-04-16T22:22:59.506299Z",
+     "shell.execute_reply.started": "2023-04-16T22:22:59.465848Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Graphene EDFT: -28768034.906402458\n",
-      "Graphene qpoints: 123\n",
+      "Graphene first 5 qpoints: [[array([0., 0., 0.]), 0.008130081300813009], [array([0.00833333, 0.00833333, 0.        ]), 0.008130081300813009], [array([0.01666667, 0.01666667, 0.        ]), 0.008130081300813009], [array([0.025, 0.025, 0.   ]), 0.008130081300813009], [array([0.03333333, 0.03333333, 0.        ]), 0.008130081300813009]]\n",
       "Graphene modes: 123 [6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
       " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
       " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
@@ -89,7 +106,7 @@
     "graphene.read_cry_output('data/nostr_modes.out')\n",
     "graphene.get_mode()\n",
     "print('Graphene EDFT:', graphene.edft[0])\n",
-    "print('Graphene qpoints:', graphene.nqpoint)\n",
+    "print('Graphene first 5 qpoints:', graphene.qpoint[:5])\n",
     "print('Graphene modes:', len(graphene.nmode), graphene.nmode)"
    ]
   },
@@ -112,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d88c6de7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:23:14.317727Z",
+     "iopub.status.busy": "2023-04-16T22:23:14.317325Z",
+     "iopub.status.idle": "2023-04-16T22:23:14.469435Z",
+     "shell.execute_reply": "2023-04-16T22:23:14.469011Z",
+     "shell.execute_reply.started": "2023-04-16T22:23:14.317708Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -146,15 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f03b4019",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:23:17.518219Z",
+     "iopub.status.busy": "2023-04-16T22:23:17.517834Z",
+     "iopub.status.idle": "2023-04-16T22:23:17.522042Z",
+     "shell.execute_reply": "2023-04-16T22:23:17.521646Z",
+     "shell.execute_reply.started": "2023-04-16T22:23:17.518189Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wavevector coordinates: [0.47083333 0.05833333 0.        ]\n",
+      "Wavevector coordinates: [array([0.47083333, 0.05833333, 0.        ]), 0.008130081300813009]\n",
       "Frequency: 19.8656\n",
       "Eigenvectors: [[ 3.49519213e-04  7.13019194e-01 -3.49519213e-04]\n",
       " [-3.49519213e-03  7.01135541e-01  3.49519213e-04]]\n"
@@ -239,9 +274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "985f98aa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:23:23.219456Z",
+     "iopub.status.busy": "2023-04-16T22:23:23.219204Z",
+     "iopub.status.idle": "2023-04-16T22:23:23.651897Z",
+     "shell.execute_reply": "2023-04-16T22:23:23.651495Z",
+     "shell.execute_reply.started": "2023-04-16T22:23:23.219440Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -260,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\huany\\AppData\\Local\\Temp\\ipykernel_2244\\3833995582.py:5: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
+      "/tmp/ipykernel_60516/3833995582.py:5: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
       "  neg_freq.clean_imaginary()\n"
      ]
     }
@@ -288,19 +332,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "27693bda-617f-479b-872a-db906e7634a2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-16T22:23:32.105641Z",
+     "iopub.status.busy": "2023-04-16T22:23:32.105391Z",
+     "iopub.status.idle": "2023-04-16T22:23:32.282128Z",
+     "shell.execute_reply": "2023-04-16T22:23:32.281691Z",
+     "shell.execute_reply.started": "2023-04-16T22:23:32.105625Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "4\n",
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
+      "[[array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0]]\n",
       "[90 90 90 90]\n"
      ]
     }
@@ -333,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
