Update code examples for new input

--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -155,14 +155,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\envs\\crystal_py3.8\\lib\\site-packages\\CRYSTALpytools\\thermodynamics.py:332: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
+      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/thermodynamics.py:425: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
       "  super(Harmonic, self).clean_imaginary()\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Harmonic at 0x24aa70e3760>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x14cb638a7c70>"
       ]
      },
      "execution_count": 2,
@@ -199,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
