--- a/examples/thermo_file_readwrite.ipynb
+++ b/examples/thermo_file_readwrite.ipynb
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "Paracetamol EDFT: -5402456.254965135\n",
-      "Paracetamol qpoint: 1 [[0. 0. 0.]]\n",
+      "Paracetamol qpoint: 1 [[array([0., 0., 0.]), 1.0]]\n",
       "Paracetamol modes: 1 [240]\n"
      ]
     }
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wavevector coordinates: [0.47083333 0.05833333 0.        ]\n",
+      "Wavevector coordinates: [array([0.47083333, 0.05833333, 0.        ]), 0.008130081300813009]\n",
       "Frequency: 19.8656\n",
       "Eigenvectors: [[ 3.49519213e-04  7.13019194e-01 -3.49519213e-04]\n",
       " [-3.49519213e-03  7.01135541e-01  3.49519213e-04]]\n"
@@ -247,8 +247,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.\n",
-      "WARNING: Negative frequencies will be substituted by NaN.\n",
       "[nan nan nan nan nan  0.]\n",
       "[[        nan         nan         nan]\n",
       " [        nan         nan         nan]\n",
@@ -256,6 +254,14 @@
       " [        nan         nan         nan]\n",
       " [        nan         nan         nan]\n",
       " [-0.07905694 -0.          0.        ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2569159/3833995582.py:5: UserWarning: Negative frequencies detected - Calculated thermodynamics might be inaccurate. Negative frequencies will be substituted by NaN.\n",
+      "  neg_freq.clean_imaginary()\n"
      ]
     }
    ],
@@ -291,10 +297,7 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
+      "[[array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0], [array([0., 0., 0.]), 1.0]]\n",
       "[90 90 90 90]\n"
      ]
     }
@@ -327,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
