update doc and example

--- a/examples/crystal_io.ipynb
+++ b/examples/crystal_io.ipynb
@@ -124,7 +124,6 @@
       "ENDGEOM\n",
       "BASISSET\n",
       "POB-DZVP\n",
-      "99 0\n",
       "ENDBS\n",
       "DIIS\n",
       "MAXCYCLE\n",
@@ -237,7 +236,200 @@
     "mgo_input.geom.optgeom.toldeg('')\n",
     "print(mgo_input.geom.optgeom.data)\n",
     "# Write the updated object to file\n",
-    "mgo_input.to_file('data/mgo-inputtest.d12')"
+    "mgo_input.to_file('data/mgo_inputtest.d12')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "486403f1-d31d-426b-b0f4-6d0c492e3d4d",
+   "metadata": {},
+   "source": [
+    "#### Set geometry\n",
+    "\n",
+    "The user can set the geometry input by a CIF file or a materials project entry when needed. There are 2 available options:\n",
+    "\n",
+    "1. Use the 'EXTERNAL' keyword and `Crystal_input` object automatically convert the geometry entry to a gui file with default settings (recommended)  \n",
+    "2. Use the 'CRYSTAL' keyword. Limited to 3D structures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f98b64ce-c8c2-4090-8dde-eb60e33ec527",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d763dde4-d00c-4c32-89d4-8b7fe7580646",
+   "metadata": {},
+   "source": [
+    "#### Set basis set\n",
+    "\n",
+    "The user can set basis set by string (as shown before), a text file, downloading it from [Basis Set Exchange (BSE)](https://www.basissetexchange.org/) or a `CRYSTALpytools.base.basisset.BasisSetBASE` object. CRYSTALpytools calls BSE's API to convert and format basis set files, so file/string in other formats (Gaussian, for example) can also be used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dbe1f740-c284-4aed-b76b-9f8f13195261",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MGO BULK - GEOMETRY TEST\n",
+      "CRYSTAL\n",
+      "0 0 0\n",
+      "225\n",
+      "4.217\n",
+      "2\n",
+      "12 0.    0.    0.\n",
+      "8 0.5   0.5   0.5\n",
+      "OPTGEOM\n",
+      "TOLDEX\n",
+      "0.0012 \n",
+      "ENDOPT\n",
+      "ENDGEOM\n",
+      "8    5    \n",
+      "0 0 6  0.00  1.00  \n",
+      "   8.5885000000E+03     1.8951500000E-03\n",
+      "   1.2972300000E+03     1.4385900000E-02\n",
+      "   2.9929600000E+02     7.0732000000E-02\n",
+      "   8.7377100000E+01     2.4000100000E-01\n",
+      "   2.5678900000E+01     5.9479700000E-01\n",
+      "   3.7400400000E+00     2.8080200000E-01\n",
+      "0 1 3  0.00  1.00  \n",
+      "   4.2117500000E+01     1.1388900000E-01     3.6511400000E-02\n",
+      "   9.6283700000E+00     9.2081100000E-01     2.3715300000E-01\n",
+      "   2.8533200000E+00    -3.2744700000E-03     8.1970200000E-01\n",
+      "0 1 1  0.00  1.00  \n",
+      "   9.0566100000E-01     1.0000000000E+00     1.0000000000E+00\n",
+      "0 1 1  0.00  1.00  \n",
+      "   2.5561100000E-01     1.0000000000E+00     1.0000000000E+00\n",
+      "0 3 1  0.00  1.00  \n",
+      "   1.2920000000E+00     1.0000000000E+00\n",
+      "12   12   \n",
+      "0 0 6  0.00  1.00  \n",
+      "   4.3866500000E+04     9.1800000000E-04\n",
+      "   6.6053700000E+03     7.0470000000E-03\n",
+      "   1.5132600000E+03     3.5941000000E-02\n",
+      "   4.3231700000E+02     1.4146100000E-01\n",
+      "   1.4214900000E+02     4.2676400000E-01\n",
+      "   5.1398300000E+01     4.9797500000E-01\n",
+      "0 0 3  0.00  1.00  \n",
+      "   5.1398300000E+01     2.5135500000E-01\n",
+      "   1.9919600000E+01     6.1867100000E-01\n",
+      "   8.0247400000E+00     1.8841700000E-01\n",
+      "0 0 1  0.00  1.00  \n",
+      "   2.5081700000E+00     1.0000000000E+00\n",
+      "0 0 1  0.00  1.00  \n",
+      "   8.7153100000E-01     1.0000000000E+00\n",
+      "0 0 1  0.00  1.00  \n",
+      "   1.0818800000E-01     1.0000000000E+00\n",
+      "0 0 1  0.00  1.00  \n",
+      "   4.0130000000E-02     1.0000000000E+00\n",
+      "0 2 4  0.00  1.00  \n",
+      "   1.9385400000E+02     1.0188000000E-02\n",
+      "   4.5442000000E+01     7.5360000000E-02\n",
+      "   1.4186400000E+01     3.0741900000E-01\n",
+      "   5.0575100000E+00     7.1757500000E-01\n",
+      "0 2 2  0.00  1.00  \n",
+      "   1.8886100000E+00     6.6733900000E-01\n",
+      "   7.2265200000E-01     3.9464900000E-01\n",
+      "0 2 1  0.00  1.00  \n",
+      "   2.3641700000E-01     1.0000000000E+00\n",
+      "0 2 1  0.00  1.00  \n",
+      "   9.3358000000E-02     1.0000000000E+00\n",
+      "0 2 1  0.00  1.00  \n",
+      "   3.4809000000E-02     1.0000000000E+00\n",
+      "0 3 1  0.00  1.00  \n",
+      "   1.7500000000E-01     1.0000000000E+00\n",
+      "99   0\n",
+      "ENDBS\n",
+      "DFT\n",
+      "XXLGRID\n",
+      "ENDDFT\n",
+      "DIIS\n",
+      "MAXCYCLE\n",
+      "200\n",
+      "FMIXING\n",
+      "70\n",
+      "TOLINTEG\n",
+      "7 7 7 7 14\n",
+      "SHRINK\n",
+      "12 24\n",
+      "ENDSCF\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2112259/2439451348.py:2: UserWarning: The previous basis set will be erased.\n",
+      "  mgo_input.basisset.from_bse('6-311G*', ['Mg', 'O'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Downlaod basis set from BSE\n",
+    "mgo_input.basisset.from_bse('6-311G*', ['Mg', 'O'])\n",
+    "print(mgo_input.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4f82a27e-105d-4d98-976c-b802dab94b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_2112259/2624786342.py:2: UserWarning: The previous basis set will be erased.\n",
+      "  mgo_input.basisset.from_file('data/mgo_inputbs.gbs', 'gaussian94')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8    2    \n",
+      "0 0 3  0.00  1.00  \n",
+      "   1.3070932140E+02     1.5432896730E-01\n",
+      "   2.3808866050E+01     5.3532814230E-01\n",
+      "   6.4436083130E+00     4.4463454220E-01\n",
+      "0 1 3  0.00  1.00  \n",
+      "   5.0331513190E+00    -9.9967229190E-02     1.5591627500E-01\n",
+      "   1.1695961250E+00     3.9951282610E-01     6.0768371860E-01\n",
+      "   3.8038896000E-01     7.0011546890E-01     3.9195739310E-01\n",
+      "12   3    \n",
+      "0 0 3  0.00  1.00  \n",
+      "   2.9923741370E+02     1.5432896730E-01\n",
+      "   5.4506468450E+01     5.3532814230E-01\n",
+      "   1.4751577520E+01     4.4463454220E-01\n",
+      "0 1 3  0.00  1.00  \n",
+      "   1.5121823520E+01    -9.9967229190E-02     1.5591627500E-01\n",
+      "   3.5139865790E+00     3.9951282610E-01     6.0768371860E-01\n",
+      "   1.1428574980E+00     7.0011546890E-01     3.9195739310E-01\n",
+      "0 1 3  0.00  1.00  \n",
+      "   1.3954482930E+00    -2.1962036900E-01     1.0587604290E-02\n",
+      "   3.8932653180E-01     2.2559543360E-01     5.9516700530E-01\n",
+      "   1.5237976590E-01     9.0039842600E-01     4.6200101200E-01\n",
+      "99   0\n",
+      "ENDBS\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read a Gaussian STO-3G basis set\n",
+    "mgo_input.basisset.from_file('data/mgo_inputbs.gbs', 'gaussian94')\n",
+    "print(mgo_input.basisset.data)"
    ]
   },
   {
