--- a/examples/crystal_io.ipynb
+++ b/examples/crystal_io.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f98b64ce-c8c2-4090-8dde-eb60e33ec527",
    "metadata": {},
    "outputs": [
@@ -308,12 +308,14 @@
    "source": [
     "#### Set basis set\n",
     "\n",
-    "The user can set basis set by string (as shown before), a text file, downloading it from [Basis Set Exchange (BSE)](https://www.basissetexchange.org/) or a `CRYSTALpytools.base.basisset.BasisSetBASE` object. CRYSTALpytools calls BSE's API to convert and format basis set files, so file/string in other formats (Gaussian, for example) can also be used."
+    "The user can set basis set by string (as shown before), a text file, downloading it from [Basis Set Exchange (BSE)](https://www.basissetexchange.org/) or a `CRYSTALpytools.base.basisset.BasisSetBASE` object. CRYSTALpytools calls BSE's API to convert and format basis set files, so file/string in other formats (Gaussian, for example) can also be used.\n",
+    "\n",
+    "Effective core pesudopotentials are supported except the free-format definitions ('INPUT' and 'INPSOC')."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "dbe1f740-c284-4aed-b76b-9f8f13195261",
    "metadata": {},
    "outputs": [
@@ -321,19 +323,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MGO BULK - GEOMETRY TEST\n",
-      "CRYSTAL\n",
-      "0 0 0\n",
-      "225\n",
-      "4.217\n",
-      "2\n",
-      "12 0.    0.    0.\n",
-      "8 0.5   0.5   0.5\n",
-      "OPTGEOM\n",
-      "TOLDEX\n",
-      "0.0012 \n",
-      "ENDOPT\n",
-      "ENDGEOM\n",
       "8    5    \n",
       "0 0 6  0.00  1.00  \n",
       "   8.5885000000E+03     1.8951500000E-03\n",
@@ -390,19 +379,6 @@
       "   1.7500000000E-01     1.0000000000E+00\n",
       "99   0\n",
       "ENDBS\n",
-      "DFT\n",
-      "XXLGRID\n",
-      "ENDDFT\n",
-      "DIIS\n",
-      "MAXCYCLE\n",
-      "200\n",
-      "FMIXING\n",
-      "70\n",
-      "TOLINTEG\n",
-      "7 7 7 7 14\n",
-      "SHRINK\n",
-      "12 24\n",
-      "ENDSCF\n",
       "\n"
      ]
     },
@@ -410,20 +386,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_3145129/2439451348.py:2: UserWarning: The previous basis set will be erased.\n",
-      "  mgo_input.basisset.from_bse('6-311G*', ['Mg', 'O'])\n"
+      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/base/crysd12.py:765: UserWarning: The previous basis set will be erased.\n",
+      "  self._check_bs(append)\n"
      ]
     }
    ],
    "source": [
     "# Downlaod basis set from BSE\n",
     "mgo_input.basisset.from_bse('6-311G*', ['Mg', 'O'])\n",
-    "print(mgo_input.data)"
+    "print(mgo_input.basisset.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4f82a27e-105d-4d98-976c-b802dab94b10",
    "metadata": {},
    "outputs": [
@@ -462,8 +438,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/rds/general/ephemeral/user/hz1420/ephemeral/ipykernel_3145129/2624786342.py:2: UserWarning: The previous basis set will be erased.\n",
-      "  mgo_input.basisset.from_file('data/mgo_inputbs.gbs', 'gaussian94')\n"
+      "/rds/general/user/hz1420/home/apps/anaconda3/envs/crystal_py3.9/lib/python3.9/site-packages/CRYSTALpytools/base/crysd12.py:813: UserWarning: The previous basis set will be erased.\n",
+      "  self._check_bs(append)\n"
      ]
     }
    ],
@@ -471,6 +447,79 @@
     "# Read a Gaussian STO-3G basis set\n",
     "mgo_input.basisset.from_file('data/mgo_inputbs.gbs', 'gaussian94')\n",
     "print(mgo_input.basisset.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d2eb231-019a-409d-b3ef-2088e907a4c8",
+   "metadata": {},
+   "source": [
+    "#### Set conventional atomic numbers\n",
+    "\n",
+    "It is strongly recommended to set conventional atomic numbers by calling methods such as `Crystal_input.geom.crystal()` and manually type corresponding atomic numbers. Even though `zconv` entry can be provided when using `Crystal_input.geom_from_cif` and `Crystal_input.geom_from_pmg`, sequences of atoms in the input file might not be consistent with sequences in output.\n",
+    "\n",
+    "To set conventional atomic numbers for basis sets, the user can either explicitly define them in string / file, or call BSE twice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d41385f6-e866-4151-afcf-41b62daeb291",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    3    \n",
+      "0 0 3  0.00  1.00  \n",
+      "   3.3865000000E+01     2.5493800000E-02\n",
+      "   5.0947900000E+00     1.9037300000E-01\n",
+      "   1.1587900000E+00     8.5216100000E-01\n",
+      "0 0 1  0.00  1.00  \n",
+      "   3.2584000000E-01     1.0000000000E+00\n",
+      "0 0 1  0.00  1.00  \n",
+      "   1.0274100000E-01     1.0000000000E+00\n",
+      "6    5    \n",
+      "0 0 6  0.00  1.00  \n",
+      "   4.5632400000E+03     1.9666500000E-03\n",
+      "   6.8202400000E+02     1.5230600000E-02\n",
+      "   1.5497300000E+02     7.6126900000E-02\n",
+      "   4.4455300000E+01     2.6080100000E-01\n",
+      "   1.3029000000E+01     6.1646200000E-01\n",
+      "   1.8277300000E+00     2.2100600000E-01\n",
+      "0 1 3  0.00  1.00  \n",
+      "   2.0964200000E+01     1.1466000000E-01     4.0248700000E-02\n",
+      "   4.8033100000E+00     9.1999900000E-01     2.3759400000E-01\n",
+      "   1.4593300000E+00    -3.0306800000E-03     8.1585400000E-01\n",
+      "0 1 1  0.00  1.00  \n",
+      "   4.8345600000E-01     1.0000000000E+00     1.0000000000E+00\n",
+      "0 1 1  0.00  1.00  \n",
+      "   1.4558500000E-01     1.0000000000E+00     1.0000000000E+00\n",
+      "0 3 1  0.00  1.00  \n",
+      "   6.2600000000E-01     1.0000000000E+00\n",
+      "101  4    \n",
+      "0 0 3  0.00  1.00  \n",
+      "   3.4061341000E+01     6.0251978000E-03\n",
+      "   5.1235746000E+00     4.5021094000E-02\n",
+      "   1.1646626000E+00     2.0189726000E-01\n",
+      "0 0 1  0.00  1.00  \n",
+      "   3.2723041000E-01     1.0000000000E+00\n",
+      "0 0 1  0.00  1.00  \n",
+      "   1.0307241000E-01     1.0000000000E+00\n",
+      "0 2 1  0.00  1.00  \n",
+      "   8.0000000000E-01     1.0000000000E+00\n",
+      "99   0\n",
+      "ENDBS\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = Crystal_input()\n",
+    "obj.basisset.from_bse('6-311G*', ['C', 'H']) # Normal definition\n",
+    "obj.basisset.from_bse('def2-TZVP', [['H', 101]], append=True) # Define a second basis set for H with label 101\n",
+    "print(obj.basisset.data)"
    ]
   },
   {
